# anolis-protocol

./: CHANGELOG.md  README.md  buf.gen.yaml  pyproject.toml
.github/workflows/: buf.yml  release.yml
docs/: README.md  VERSIONING.md
proto/anolis/deviceprovider/v1/: types.proto
spec/device-provider/: README.md  protocol.proto  semantics.md
